--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "version": "1.0.0",
   "engines": {
     "node": "12.13.1"
+  },
+  "dependencies": {
+    "danbooru": "3.1.0",
+    "discord.js": "11.5.1"
   }
 }
