--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "danbooru": "3.1.0",
     "discord.js": "11.5.1"
-  }
+  },
+  "scripts": {
+    "start": "node bot.js",
+  },
 }
